crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/top_level_event/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.22'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/SourceUnit/top_level_event/input.sol:2:1]
   │
 2 │ event E1(uint256 value);
   │ ────────────┬───────────  
   │             ╰───────────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            EventDefinition(
                EventDefinitionStruct {
                    event_keyword: EventKeyword {
                        range: 101..106,
                    },
                    name: Identifier {
                        range: 107..109,
                    },
                    parameters: EventParametersDeclarationStruct {
                        open_paren: OpenParen {
                            range: 109..110,
                        },
                        parameters: EventParameters {
                            elements: [
                                EventParameterStruct {
                                    type_name: ElementaryType(
                                        UintKeyword(
                                            UintKeyword {
                                                range: 110..117,
                                            },
                                        ),
                                    ),
                                    indexed_keyword: None,
                                    name: Some(
                                        Identifier {
                                            range: 118..123,
                                        },
                                    ),
                                },
                            ],
                        },
                        close_paren: CloseParen {
                            range: 123..124,
                        },
                    },
                    anonymous_keyword: None,
                    semicolon: Semicolon {
                        range: 124..125,
                    },
                },
            ),
        ],
    },
}
